# gerbtrace

./: .env.example  .gitignore  AGENTS.md  CNAME  DEPLOY.md  KEYWORDS.md  LICENSE  README.md  RELEASE_CHECKLIST.md  content.config.ts  dist  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  sentry.client.config.ts  sentry.server.config.ts  vitest.config.ts  wrangler.jsonc
.claude/: launch.json
.cursor/: settings.json
app/: app.config.ts  app.vue
docs/: bom-format.md  cad-library-ingestion.md  cad-library-parser.md  my600-jetprinter.md  package-canonical-naming-rules.md  packages.md  sentry.md  sidebar-design.md  tpsys-format.md
public/: site.webmanifest
scripts/: add-missing-packages.mjs  build-packages-manifest.mjs  build-tht-packages-manifest.mjs  cad-library-sources.json  check-packages.mjs  cleanup-legacy-package-root.mjs  cleanup-packages.mjs  enrich-packages.mjs  export-asana-project-tasks.mjs  extract-mycenter-packages.mjs  generate-common-packages.mjs  generate-icons.ts  generate-samples.mjs  migrate-builtins-to-library-tree.mjs  package-creation-flow-validation.md  parse-cad-libraries-to-tht.mjs  parse-cad-libraries-to-tpsys.mjs  pck-parser.mjs  prepare-tauri-frontend.mjs  prune-static-output.mjs  set-sentry-secrets.mjs  setup-apple-signing.sh  setup-branch-protection.sh  setup-github-secrets.sh  setup-supabase-droplet.sh  sync-cad-libraries.mjs  tauri-build.mjs  test-panel-suggestions.mts  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+4349 files in other folders)
