[package]
name = "gerbtrace"
version = "1.0.12"
description = "Gerbtrace — View and compare Gerber PCB files"
authors = ["Newmatik GmbH"]
license = "MIT"
repository = "https://github.com/newmatik/gerbtrace"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gerbtrace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
